--- a/src/components/core/DataList/style/_listColumnHeader.scss
+++ b/src/components/core/DataList/style/_listColumnHeader.scss
@@ -3,7 +3,10 @@
     background-color: #5a8dc3;
     // background-image: linear-gradient(to bottom, #5a8dc3, #49719c);
     background-color: #103863;
+    
     color: #fff;
+    background-color: #23282d;
+    color: #eee;
     .list__column-header__cell {
       &.checkbox-cell {
         width: 10px;
