--- a/src/components/Menus/style.scss
+++ b/src/components/Menus/style.scss
@@ -1,24 +1,34 @@
 .menu-wrapper {
-  padding: 20px 0;
+  padding: 30px 0;
 
   color: #fff;
   width: 100%;
-  width: 300px;
+  // width: 300px;
   height: 100%;
   float: left;
   ul {
     list-style: none;
     margin: 0;
-    padding: 0 20px;
+    padding: 0;
     li {
-      padding: 0 10px;
+      padding: 0;
       margin: 0;
       a {
+        display: block;
         color: #fff;
+        color: #eee;
         text-decoration: none;
+        padding: 4px 20px;
         cursor: pointer;
         &:hover {
           font-weight: bold;
+        }
+        &.active {
+          background: #0073aa;
+          background: #0073aa;
+          width: 100%;
+          display: block;
+          
         }
       }
       &.menu-has-children {
