--- a/src/components/core/DataDetail/style/_detailBody.scss
+++ b/src/components/core/DataDetail/style/_detailBody.scss
@@ -1,18 +1,23 @@
 .detail {
   .detail__body {
-    display: table;
+    // display: table;
+    border: 1px solid #dee2e6;
+    background-color: #fff;
+    width: 100%;
     padding: 5px;
+    display: table;
+    height: 100%;
     .detail__row {
-      display: table-row;
-
+      // display: table-row;
+      padding: 20px;
+      height: 100px;
+      float: left;
       .detail__field-label {
-        padding: 10px;
-        display: table-cell;
+        // display: table-cell;
         font-weight: bold;
       }
       .detail__field-control {
-        padding: 10px;
-        display: table-cell;
+        // display: table-cell;
         .control {
         }
       }
