--- a/src/components/core/DataDetail/style/_detailHeader.scss
+++ b/src/components/core/DataDetail/style/_detailHeader.scss
@@ -1,11 +1,12 @@
 .detail {
   .detail__header {
-    background-color: #151f29;
-    background-color: #49719c;
-    background-color: #103863;
-    background-image: linear-gradient(to bottom, #103863, #49719c);
-    background-image: linear-gradient(to bottom, #5a8dc3, #49719c);
-    color: #fff;
+    
+    // background-color: #151f29;
+    // background-color: #49719c;
+    // background-color: #103863;
+    // background-image: linear-gradient(to bottom, #103863, #49719c);
+    // background-image: linear-gradient(to bottom, #5a8dc3, #49719c);
+    color: #0073aa;
     padding: 10px;
     display: flex;
     .detail__title {
@@ -13,24 +14,37 @@
     }
     .detail-actions {
       display: flex;
-      color: #dcd5dc;
+      color: #0073aa;
       .btn-cmd {
-        padding: 0 5px;
+        // padding: 0 5px;
+        margin-left: 20px;
         cursor: pointer;
-        width: 85px;
-        &.btn-cmd--save {
-          width: 100px;
-        }
-        &.btn-cmd--add-new {
-          width: 105px;
-        }
-        &.btn-cmd--cancel {
-          width: 90px;
-        }
+        // width: 85px;
+        // &.btn-cmd--save {
+        //   width: 100px;
+        // }
+        // &.btn-cmd--add-new {
+        //   width: 105px;
+        // }
+        // &.btn-cmd--cancel {
+        //   width: 90px;
+        // }
         &.active {
-          color: #fff;
+          color: #0073aa;
           &:hover {
-            font-weight: bold;
+            // background-color: #094688;
+            position: relative;
+            display: block;
+            &:before {
+              content: '';
+              width: 100%;
+              height: 2px;
+              background-color: #0073aa;
+              position: absolute;
+              bottom: 0;
+              left: 0;
+            }
+
           }
         }
       }
