--- a/src/components/core/DataList/style/_list.scss
+++ b/src/components/core/DataList/style/_list.scss
@@ -1,6 +1,8 @@
 .list {
-  height: 100%;
+  // flex: 1;
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 .zoomIn {
   transition-duration: 3000ms;
