--- a/src/components/core/DataList/style/_listBody.scss
+++ b/src/components/core/DataList/style/_listBody.scss
@@ -1,4 +1,8 @@
 .list {
+  .list-body-pagination--wrapper {
+    flex: 1;
+    border: 1px solid #dee2e6;
+  }
   .list__body--wrapper {
     // height: 100vh;
     // overflow: auto;
@@ -8,7 +12,7 @@
     width: 100%;
     .list__row {
       cursor: pointer;
-      border-bottom: 1px solid #818182;
+      border-bottom: 1px solid #dee2e6;
       &:nth-child(even) {
         background-color: #fff;
       }
@@ -17,16 +21,19 @@
       }
       &:hover {
         background-color: #bec6ce;
-        background-image: linear-gradient(to bottom, #a8c8e8, #fff);
+        // background-image: linear-gradient(to bottom, #a8c8e8, #fff);
+        background: #d8e1ea;
         // background-color: #a8c8e8;
       }
       &.editView {
         background-color: #bec6ce;
-        background-color: #a8c8e8;
+        background-color: #d8e1ea;
       }
       .list-cell {
         padding: 2px 10px;
-        border-right: 1px solid #818182;
+        padding: 0 10px;
+        border-right: 1px solid #d5d8da;
+        height: 40px;
         &.editable {
           cursor: pointer;
         }
@@ -43,8 +50,12 @@
       }
       &.invalid {
         .list-cell {
-          padding-top: 5px;
-          vertical-align: top;
+          &:first-child {
+            label {
+              margin: 0;
+            }
+          }
+          vertical-align: middle;
         }
       }
     }
