--- a/src/components/core/DataList/style/_listHeader.scss
+++ b/src/components/core/DataList/style/_listHeader.scss
@@ -1,42 +1,56 @@
 .list {
   .list__header {
-    background-color: #151f29;
-    background-color: #49719c;
-    background-color: #103863;
-    background-image: linear-gradient(to bottom, #103863, #49719c);
-    background-image: linear-gradient(to bottom, #5a8dc3, #49719c);
+    // background-color: #151f29;
+    // background-color: #49719c;
+    // background-color: #103863;
+    // background-image: linear-gradient(to bottom, #103863, #49719c);
+    // background-image: linear-gradient(to bottom, #5a8dc3, #49719c);
+    border: 1px solid #dee2e6;
     color: #fff;
     padding: 10px;
     display: flex;
     .list__title {
       flex: 1;
+      color: #0073aa;
     }
     .list__bulk-actions {
       display: flex;
       color: #dcd5dc;
       .btn-cmd {
+        font-size: 14px;
         padding: 0 5px;
         cursor: pointer;
-        width: 85px;
+        // width: 85px;
         border-radius: 8px;
-        padding: 5px;
-        text-align: center;
-        margin: 0 5px;
-        background-color: #2a67a9;
-        &.btn-cmd--bulk-save {
-          width: 100px;
-        }
-        &.btn-cmd--bulk-add-new {
-          width: 105px;
-        }
-        &.btn-cmd--bulk-cancel {
-          width: 90px;
-        }
+        margin-left: 20px;
+        padding: 0;
+        
+        // background-color: #2a67a9;
+        // &.btn-cmd--bulk-save {
+        //   width: 100px;
+        // }
+        // &.btn-cmd--bulk-add-new {
+        //   width: 105px;
+        // }
+        // &.btn-cmd--bulk-cancel {
+        //   width: 90px;
+        // }
         &.active {
-          color: #fff;
-          background-color: #094688;
+          color: #0073aa;
           &:hover {
-            font-weight: bold;
+            // background-color: #094688;
+            position: relative;
+            display: block;
+            &:before {
+              content: '';
+              width: 100%;
+              height: 2px;
+              background-color: #0073aa;
+              position: absolute;
+              bottom: 0;
+              left: 0;
+            }
+
           }
         }
       }
